--- a/package.json
+++ b/package.json
@@ -3,41 +3,46 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulp.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "homepage": "https://github.com/Yura13/D-Tester",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Yura13/D-Tester.git"
+  },
   "scripts": {
     "init": "npm install",
     "install": "bower install"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^2.0.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-bump": "^2.1.0",
-    "gulp-csso": "^2.0.0",
-    "gulp-filter": "^4.0.0",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-inject": "^4.1.0",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-print": "^2.0.1",
-    "gulp-rev": "^7.1.0",
-    "gulp-rev-replace": "^0.4.3",
-    "gulp-task-listing": "^1.0.1",
-    "gulp-uglify": "^1.5.4",
-    "gulp-useref": "^3.1.0",
-    "gulp-util": "^3.0.7",
-    "jshint-stylish": "^2.2.0",
-    "lodash": "^4.13.1",
-    "node-notifier": "^4.6.0",
-    "wiredep": "^4.0.0",
-    "yargs": "^4.7.1"
+    "del": "^1.1.1",
+    "gulp": "^3.8.10",
+    "gulp-angular-templatecache": "^1.5.0",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-bump": "^0.1.11",
+    "gulp-csso": "^0.2.9",
+    "gulp-filter": "^2.0.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.1.0",
+    "gulp-inject": "^1.1.1",
+    "gulp-jscs": "^1.3.1",
+    "gulp-jshint": "^1.9.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-html": "^0.1.8",
+    "gulp-ng-annotate": "^0.4.3",
+    "gulp-plumber": "^0.6.6",
+    "gulp-print": "^1.1.0",
+    "gulp-rev": "^2.0.1",
+    "gulp-rev-replace": "^0.3.1",
+    "gulp-task-listing": "^1.0.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-useref": "^1.1.0",
+    "gulp-util": "^3.0.1",
+    "jshint-stylish": "^1.0.0",
+    "lodash": "^2.4.1",
+    "node-notifier": "^4.0.3",
+    "wiredep": "^2.2.2",
+    "yargs": "^1.3.3"
   }
 }
