--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gulp": "^3.8.10",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-autoprefixer": "^2.0.0",
-    "gulp-bump": "^0.1.11",
     "gulp-csso": "^0.2.9",
     "gulp-filter": "^2.0.0",
     "gulp-if": "^1.2.5",
@@ -39,7 +38,13 @@
     "gulp-uglify": "^1.0.2",
     "gulp-useref": "^1.1.0",
     "gulp-util": "^3.0.1",
+    "jasmine": "^2.4.1",
     "jshint-stylish": "^1.0.0",
+    "karma": "^1.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "lite-server": "^2.2.2",
     "lodash": "^2.4.1",
     "node-notifier": "^4.0.3",
     "wiredep": "^2.2.2",
