--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angular-messages": "^1.5.7",
-    "angular-material": "^1.0.9"
+    "angular-material": "^1.0.9",
+    "angular-mocks": "^1.5.7"
   }
 }
